Show plant details on item click

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,4 +9,16 @@
         android:name="com.emanuel.mivivero.ui.vivero.ViveroFragment"
         android:label="Mi Vivero" />
 
+
+    <fragment
+        android:id="@+id/plantaDetalleFragment"
+        android:name="com.emanuel.mivivero.ui.vivero.PlantaDetalleFragment"
+        android:label="Detalle Planta">
+
+        <argument
+            android:name="plantaId"
+            app:argType="long" />
+    </fragment>
+
+
 </navigation>
