--- a/app/src/main/res/layout/fragment_planta_detalle.xml
+++ b/app/src/main/res/layout/fragment_planta_detalle.xml
@@ -44,6 +44,16 @@
         android:layout_marginTop="8dp" />
 
 
+    <ImageView
+        android:id="@+id/imgPlantaTest"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/planta_test" />
+
+
+
     <!-- Lista de fotos (por ahora solo texto) -->
     <LinearLayout
         android:id="@+id/layoutFotos"
