--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.MiVivero" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <style name="Theme.MiVivero" parent="Base.Theme.MiVivero" />
+    <style name="Base.Theme.MiVivero"
+        parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+
+    <style name="Theme.MiVivero"
+        parent="Base.Theme.MiVivero" />
+
 </resources>
