--- a/app/src/main/res/layout/fragment_crear_planta.xml
+++ b/app/src/main/res/layout/fragment_crear_planta.xml
@@ -64,6 +64,23 @@
             android:scaleType="centerCrop"
             android:background="#DDDDDD" />
 
+        <TextView
+            android:id="@+id/txtFechaFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sin foto"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            android:layout_marginTop="4dp" />
+
+        <Button
+            android:id="@+id/btnGaleria"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Elegir de la galería"
+            android:layout_marginTop="8dp" />
+
+
         <Button
             android:id="@+id/btnFoto"
             android:layout_width="match_parent"
