--- a/app/src/main/res/layout/item_foto.xml
+++ b/app/src/main/res/layout/item_foto.xml
@@ -1,6 +1,23 @@
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/imgFoto"
-    android:layout_width="120dp"
-    android:layout_height="120dp"
-    android:scaleType="centerCrop"
-    android:layout_marginEnd="8dp" />
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="4dp">
+
+    <ImageView
+        android:id="@+id/imgFoto"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:scaleType="centerCrop"
+        android:background="#DDDDDD" />
+
+    <TextView
+        android:id="@+id/txtFecha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="#555555"
+        android:gravity="center"
+        android:text="01/01/2026" />
+</LinearLayout>
