Paso 3 agregar fotos con camara y galería

--- a/app/src/main/res/layout/fragment_planta_detalle.xml
+++ b/app/src/main/res/layout/fragment_planta_detalle.xml
@@ -17,6 +17,13 @@
             android:background="#DDDDDD"
             android:visibility="gone" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerFotos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp" />
+
+
         <TextView
             android:id="@+id/txtFamilia"
             android:layout_width="wrap_content"
