--- a/app/src/main/res/layout/item_foto.xml
+++ b/app/src/main/res/layout/item_foto.xml
@@ -1,23 +1,32 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="4dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="140dp">
 
-    <ImageView
-        android:id="@+id/imgFoto"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:scaleType="centerCrop"
-        android:background="#DDDDDD" />
-
-    <TextView
-        android:id="@+id/txtFecha"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="#555555"
-        android:gravity="center"
-        android:text="01/01/2026" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgFoto"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/txtFecha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="12sp"
+            android:padding="4dp" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/overlaySeleccion"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#6600AEEF"
+        android:visibility="gone" />
+</FrameLayout>
