Paso 6 se puede agregar foto sin problemas pero no puedo eligir la princ

--- a/app/src/main/res/layout/fragment_comparar_fotos.xml
+++ b/app/src/main/res/layout/fragment_comparar_fotos.xml
@@ -3,18 +3,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imgArriba"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scaleType="fitCenter" />
+        android:gravity="center">
 
-    <ImageView
-        android:id="@+id/imgAbajo"
+        <ImageView
+            android:id="@+id/imgArriba"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter" />
+
+        <TextView
+            android:id="@+id/txtFechaArriba"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray"
+            android:layout_marginTop="4dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scaleType="fitCenter" />
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/imgAbajo"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter" />
+
+        <TextView
+            android:id="@+id/txtFechaAbajo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray"
+            android:layout_marginTop="4dp"/>
+    </LinearLayout>
 
 </LinearLayout>
