--- a/app/src/main/res/layout/item_foto.xml
+++ b/app/src/main/res/layout/item_foto.xml
@@ -7,6 +7,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/txtPrincipal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PRINCIPAL"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:background="@android:color/holo_green_dark"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="2dp"
+            android:layout_margin="4dp"
+            android:visibility="gone"/>
+
+
         <ImageView
             android:id="@+id/imgFoto"
             android:layout_width="match_parent"
