--- a/app/src/main/res/layout/fragment_comparar_fotos.xml
+++ b/app/src/main/res/layout/fragment_comparar_fotos.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- CONTENEDOR FOTO NUEVA -->
     <LinearLayout
+        android:id="@+id/contenedorArriba"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -26,7 +28,22 @@
             android:layout_marginTop="4dp"/>
     </LinearLayout>
 
+    <!-- SLIDER -->
+    <SeekBar
+        android:id="@+id/slider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="50"
+        android:splitTrack="false"
+        android:thumbOffset="0dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="0dp"/>
+
+
+    <!-- CONTENEDOR FOTO VIEJA (FIJA) -->
     <LinearLayout
+        android:id="@+id/contenedorAbajo"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
