--- a/app/src/main/res/layout/fragment_vivero.xml
+++ b/app/src/main/res/layout/fragment_vivero.xml
@@ -12,13 +12,29 @@
         android:padding="8dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabCrearAlbumes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Crear álbumes"
+        android:tooltipText="Crear álbumes"
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="88dp"
+        app:layout_anchor="@id/recyclerVivero"
+        app:layout_anchorGravity="bottom|end"
+        app:fabSize="mini"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAgregarPlanta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Agregar planta"
+        android:tooltipText="Agregar planta"
         android:src="@android:drawable/ic_input_add"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_anchor="@id/recyclerVivero"
-        app:layout_anchorGravity="bottom|end" />
+        app:layout_anchorGravity="bottom|end"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
