--- a/app/src/main/res/layout/fragment_vivero.xml
+++ b/app/src/main/res/layout/fragment_vivero.xml
@@ -1,40 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#F5F5F5">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerVivero"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabCrearAlbumes"
+    <!-- 🔹 GRID CENTRAL DE ACCIONES -->
+    <GridLayout
+        android:id="@+id/gridAcciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Crear álbumes"
-        android:tooltipText="Crear álbumes"
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="88dp"
-        app:layout_anchor="@id/recyclerVivero"
-        app:layout_anchorGravity="bottom|end"
-        app:fabSize="mini"/>
+        android:columnCount="2"
+        android:rowCount="2"
+        android:useDefaultMargins="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAgregarPlanta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="Agregar planta"
-        android:tooltipText="Agregar planta"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_anchor="@id/recyclerVivero"
-        app:layout_anchorGravity="bottom|end"/>
+        <Button
+            android:id="@+id/btnVerPlantas"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:padding="15dp"
+            android:text="Plantas"
+            android:textSize="15sp"
+            android:backgroundTint="#7FD1C3"/>
 
+        <Button
+            android:id="@+id/btnVerAlbumes"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:padding="15dp"
+            android:text="Álbumes"
+            android:textSize="15sp"
+            android:backgroundTint="#7FD1C3"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <Button
+            android:id="@+id/btnCrearPlanta"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:padding="15dp"
+            android:text="Nueva\nPlanta"
+            android:textSize="15sp"
+            android:backgroundTint="#7FD1C3"/>
+
+        <Button
+            android:id="@+id/btnCrearAlbum"
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:padding="15dp"
+            android:text="Nuevo\nÁlbum"
+            android:textSize="15sp"
+            android:backgroundTint="#7FD1C3"/>
+
+    </GridLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
