--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,11 +4,26 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/viveroFragment">
 
+    <!-- 🌱 MENÚ PRINCIPAL -->
     <fragment
         android:id="@+id/viveroFragment"
         android:name="com.emanuel.mivivero.ui.fragment.ViveroFragment"
-        android:label="Vivero" />
+        android:label="Vivero">
 
+        <action
+            android:id="@+id/action_viveroFragment_to_listaPlantasFragment"
+            app:destination="@id/listaPlantasFragment" />
+
+        <action
+            android:id="@+id/action_viveroFragment_to_crearAlbumesFragment"
+            app:destination="@id/crearAlbumesFragment" />
+
+        <action
+            android:id="@+id/action_viveroFragment_to_albumesFragment"
+            app:destination="@id/albumesFragment" />
+    </fragment>
+
+    <!-- 🌿 PLANTAS -->
     <fragment
         android:id="@+id/crearPlantaFragment"
         android:name="com.emanuel.mivivero.ui.fragment.CrearPlantaFragment"
@@ -21,6 +36,11 @@
     </fragment>
 
     <fragment
+        android:id="@+id/listaPlantasFragment"
+        android:name="com.emanuel.mivivero.ui.vivero.ListaPlantasFragment"
+        android:label="Plantas" />
+
+    <fragment
         android:id="@+id/plantaDetalleFragment"
         android:name="com.emanuel.mivivero.ui.fragment.PlantaDetalleFragment"
         android:label="Detalle Planta" />
@@ -29,15 +49,46 @@
         android:id="@+id/compararFotosFragment"
         android:name="com.emanuel.mivivero.ui.fragment.CompararFotosFragment"
         android:label="Comparar fotos" />
+
+    <!-- 📚 ÁLBUMES -->
     <fragment
         android:id="@+id/crearAlbumesFragment"
         android:name="com.emanuel.mivivero.ui.albumes.CrearAlbumesFragment"
-        android:label="Creación de álbumes" />
+        android:label="Crear álbum">
 
-    <action
-        android:id="@+id/action_viveroFragment_to_crearAlbumesFragment"
-        app:destination="@id/crearAlbumesFragment" />
+        <!-- preparada para etapa 2 -->
+        <!--
+        <action
+            android:id="@+id/action_crearAlbumesFragment_to_editarAlbumFragment"
+            app:destination="@id/editarAlbumFragment" />
+        -->
+    </fragment>
 
+    <fragment
+        android:id="@+id/editarAlbumFragment"
+        android:name="com.emanuel.mivivero.ui.albumes.EditarAlbumFragment"
+        android:label="Editar álbum">
+
+        <argument
+            android:name="albumId"
+            app:argType="long" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/albumDetalleFragment"
+        android:name="com.emanuel.mivivero.ui.albumes.AlbumDetalleFragment"
+        android:label="Detalle del álbum" />
+
+    <fragment
+        android:id="@+id/albumesFragment"
+        android:name="com.emanuel.mivivero.ui.albumes.AlbumesFragment"
+        android:label="Álbumes">
+
+        <action
+            android:id="@+id/action_albumesFragment_to_crearAlbumesFragment"
+            app:destination="@id/crearAlbumesFragment" />
+
+    </fragment>
 
 
 </navigation>
