--- a/app/src/main/res/layout/fragment_album_detalle.xml
+++ b/app/src/main/res/layout/fragment_album_detalle.xml
@@ -31,4 +31,14 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <Button
+        android:id="@+id/btnEditarAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Agregar mas plantas"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#00796B"
+        android:textColor="@android:color/white"/>
+
+
 </LinearLayout>
