--- a/app/src/main/res/layout/fragment_lista_plantas.xml
+++ b/app/src/main/res/layout/fragment_lista_plantas.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <!-- CONTENEDOR -->
+    <!-- CONTENEDOR PRINCIPAL -->
     <LinearLayout
         android:id="@+id/contenedorPrincipal"
         android:layout_width="match_parent"
@@ -25,15 +25,31 @@
             android:textColor="#424242"
             android:paddingBottom="8dp" />
 
-        <!-- BUSCADOR -->
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchPlantas"
+        <!-- BUSCADOR + ORDEN -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:iconifiedByDefault="false"
-            android:queryHint="Buscar plantas"
-            android:background="@android:color/darker_gray"
-           />
+            android:orientation="horizontal"
+            android:layout_marginTop="4dp">
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchPlantas"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:iconifiedByDefault="false"
+                android:queryHint="Buscar plantas"
+                android:background="@android:color/darker_gray" />
+
+            <Button
+                android:id="@+id/btnOrdenarAZ"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:backgroundTint="@color/btn_enabled"
+                android:text="A-Z"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
 
         <!-- LISTA -->
         <androidx.recyclerview.widget.RecyclerView
@@ -42,6 +58,16 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:paddingTop="8dp" />
+
+        <!-- BOTÓN VOLVER -->
+        <Button
+            android:id="@+id/btnVolverAlbum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#00796B"
+            android:text="Volver al álbum"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
