--- a/app/src/main/res/layout/fragment_album_detalle.xml
+++ b/app/src/main/res/layout/fragment_album_detalle.xml
@@ -41,4 +41,15 @@
         android:textColor="@android:color/white"/>
 
 
+    <Button
+        android:id="@+id/btnPublicarAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Publicar álbum"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#4CAF50"
+        android:textColor="@android:color/white"/>
+
+
+
 </LinearLayout>
